<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/couleurFond"
        android:gravity="center"
        android:padding="16dp">

    <!-- Prenom Input -->
    <TextView
        android:id="@+id/tvPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom_label"
        android:textColor="@color/couleurTexte"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/prenom_hint"
            android:textColor="#8F9294"
            tools:text="@tools:sample/last_names" />

    <!-- Sexe Radio Buttons -->
    <TextView
        android:text="@string/sexe_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/couleurTexte"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/rgSexe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rbMonsieur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monsieur"
            android:textColor="@color/couleurTexte"
            android:layout_marginRight="16dp"/>

        <RadioButton
            android:id="@+id/rbMadame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Madame"
            android:textColor="@color/couleurTexte"/>
    </RadioGroup>

    <!-- Poids Input -->
    <TextView
        android:text="@string/poids_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/couleurTexte"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etPoids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/poids_hint"
        android:textColor="@color/couleurTexte"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        />

    <!-- Taille Input -->
    <TextView
        android:text="@string/taille_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/couleurTexte"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etTaille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/taille_hint"
        android:textColor="@color/couleurTexte"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        />

    <!-- Buttons -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:radius="16dp"
            android:text="@string/btn_send"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:radius="16dp"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <!-- Result Display -->
    <TextView
        android:id="@+id/tvResultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultat_label"
        android:textColor="@color/couleurTexte"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
